--- a/index.html
+++ b/index.html
@@ -3,142 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arix Signature Interactive Tree - Golden Snow</title>
+    <title>Arix Signature Christmas 2025</title>
     <style>
-        body { margin: 0; background: #010805; overflow: hidden; }
-        canvas { display: block; }
-        #loader {
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            color: #FFD700; font-family: serif; letter-spacing: 2px; text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
-        }
+        body { margin: 0; background-color: #010805; overflow: hidden; font-family: 'Times New Roman', serif; }
+        #ui { position: absolute; top: 10%; width: 100%; text-align: center; color: #FFD700; pointer-events: none; }
+        h1 { font-size: 2.5rem; letter-spacing: 5px; margin: 0; text-shadow: 0 0 15px rgba(255, 215, 0, 0.6); }
+        p { font-size: 1rem; opacity: 0.8; letter-spacing: 2px; }
     </style>
 </head>
 <body>
-    <div id="loader">ARIX SIGNATURE Loading...</div>
-    <div id="root"></div>
 
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
-    <script src="https://unpkg.com/@react-three/fiber@8.15.12/dist/react-three-fiber.umd.js"></script>
-    <script src="https://unpkg.com/@react-three/drei@9.88.16/dist/index.umd.js"></script>
+    <div id="ui">
+        <h1>ARIX SIGNATURE</h1>
+        <p>Interactive Christmas Experience</p>
+    </div>
 
-    <script type="text/babel">
-        const { Canvas, useFrame } = ReactThreeFiber;
-        const { Float, PerspectiveCamera, OrbitControls, Environment, Sphere, MeshStandardMaterial } = dreis;
-        const { useMemo, useRef } = React;
-
-        // 金箔雪花組件
-        function GoldenSnow() {
-            const ref = useRef();
-            const count = 1000; // 金箔數量
-            const range = 20;   // 金箔分佈範圍
-            const speed = 0.05; // 飄落速度
-
-            const positions = useMemo(() => {
-                const positions = new Float32Array(count * 3);
-                for (let i = 0; i < count; i++) {
-                    // 初始位置隨機分佈在一個大範圍內
-                    positions[i * 3] = (Math.random() - 0.5) * range;      // X
-                    positions[i * 3 + 1] = Math.random() * range * 2 - range; // Y (上下)
-                    positions[i * 3 + 2] = (Math.random() - 0.5) * range;      // Z
-                }
-                return positions;
-            }, [count, range]);
-
-            // 每幀更新金箔位置，模擬飄落
-            useFrame((state, delta) => {
-                if (ref.current) {
-                    const positions = ref.current.geometry.attributes.position.array;
-                    for (let i = 0; i < count; i++) {
-                        positions[i * 3 + 1] -= speed * delta * 60; // Y 軸下降
-                        // 如果超出底部，則回到頂部
-                        if (positions[i * 3 + 1] < -range) {
-                            positions[i * 3 + 1] = range;
-                        }
-                    }
-                    ref.current.geometry.attributes.position.needsUpdate = true;
-                }
-            });
-
-            return (
-                <points ref={ref}>
-                    <bufferGeometry>
-                        <bufferAttribute 
-                            attach="attributes-position" 
-                            array={positions} 
-                            count={positions.length / 3} 
-                            itemSize={3} 
-                        />
-                    </bufferGeometry>
-                    {/* 金色材質，發光效果 */}
-                    <pointsMaterial 
-                        color="#FFD700" 
-                        size={0.1} 
-                        sizeAttenuation={true} 
-                        transparent={true} 
-                        opacity={0.8}
-                        blending={THREE.AdditiveBlending} // 疊加混合，讓金箔更亮
-                        depthWrite={false} // 不寫深度，解決排序問題
-                    />
-                </points>
-            );
+    <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
         }
-
-        // 簡化版奢華針葉 (圓錐體替代)
-        function TreeStructure() {
-            return (
-                <group position={[0, -2, 0]}> {/* 將樹稍微下移一點 */}
-                    {/* 樹的主體 - 深祖母綠 */}
-                    {[...Array(6)].map((_, i) => (
-                        <mesh key={i} position={[0, i * 0.8, 0]}>
-                            <coneGeometry args={[2 - i * 0.3, 1.5, 8]} />
-                            <meshStandardMaterial color="#043927" roughness={0.4} metalness={0.2} />
-                        </mesh>
-                    ))}
-                    
-                    {/* 黃金裝飾球 */}
-                    {[...Array(20)].map((_, i) => (
-                        <Float key={i} speed={2} rotationIntensity={1}>
-                            <mesh position={[
-                                Math.sin(i) * 1.5, 
-                                Math.random() * 5, 
-                                Math.cos(i) * 1.5
-                            ]}>
-                                <sphereGeometry args={[0.12, 16, 16]} />
-                                <meshStandardMaterial color="#FFD700" metalness={1} roughness={0.1} emissive="#ffaa00" emissiveIntensity={0.5} />
-                            </mesh>
-                        </Float>
-                    ))}
-                </group>
-            );
-        }
-
-        function App() {
-            return (
-                <Canvas shadows camera={{ position: [0, 3, 10], fov: 45 }}>
-                    <color attach="background" args={['#010805']} />
-                    
-                    {/* 燈光設定 */}
-                    <ambientLight intensity={0.5} />
-                    <spotLight position={[10, 10, 10]} angle={0.15} penumbra={1} intensity={2} color="#FFD700" castShadow />
-                    <pointLight position={[-5, 2, -5]} color="#00ff88" intensity={1} />
-
-                    <TreeStructure />
-                    <GoldenSnow /> {/* 添加金箔雪花 */}
-
-                    {/* 環境反射 - 這是金屬高級感的來源 */}
-                    <Environment preset="city" />
-
-                    <OrbitControls autoRotate autoRotateSpeed={0.5} enableZoom={false} />
-                </Canvas>
-            );
-        }
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-        document.getElementById('loader').style.display = 'none';
+    }
     </script>
-</body>
-</html>
+
+    <script type="module">
+        import * as THREE from 'three';
+        import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+
+        // 1. 初始化場景
+        const scene = new THREE.Scene();
+        scene.background = new THREE.Color(0x010805);
+        scene.fog = new THREE.Fog(0x010805, 5, 25);
+
+        const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.set(0, 3, 10);
+
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.toneMapping = THREE.ACESFilmicToneMapping;
+        document.body.appendChild(
