--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
             position: absolute; top: 40px; width: 100%; text-align: center;
             color: #ffd700; font-size: clamp(20px, 5vw, 32px); pointer-events: none; 
             text-shadow: 0 0 15px rgba(255,215,0,0.7);
-            font-family: serif; z-index: 10;
+            font-family: 'Noto Serif TC', serif; z-index: 10;
         }
         #audio-hint {
             position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);
-            color: #fff; cursor: pointer; border: 1px solid #d4af37; padding: 12px 24px; 
-            border-radius: 30px; background: rgba(212,175,55,0.3); backdrop-filter: blur(10px);
+            color: #fff; cursor: pointer; border: 1px solid #d4af37; padding: 14px 28px; 
+            border-radius: 35px; background: rgba(212,175,55,0.4); backdrop-filter: blur(10px);
             font-family: 'Noto Serif TC', serif; z-index: 100; white-space: nowrap;
+            box-shadow: 0 0 20px rgba(212,175,55,0.3); transition: all 0.3s;
         }
+        #audio-hint:active { transform: translateX(-50%) scale(0.95); background: rgba(212,175,55,0.6); }
+        /* 隱藏 Bilibili 播放器 */
+        #bili-player { position: absolute; width: 1px; height: 1px; opacity: 0; pointer-events: none; }
     </style>
 </head>
 <body>
     <div id="instructions">Merry Christmas to 鐵鐵</div>
-    <div id="audio-hint" onclick="playMusic()">🎵 點擊啟動音樂與特效</div>
+    <div id="audio-hint" onclick="playMusic()">🎄 點擊點亮聖誕 & 播放《又到聖誕》</div>
+
+    <iframe id="bili-player" src="//player.bilibili.com/player.html?bvid=BV1vX4y1M78y&page=1&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 
 <script type="importmap">
     {
@@ -44,7 +50,7 @@ const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 const renderer = new THREE.WebGLRenderer({ antialias: true });
 renderer.setSize(window.innerWidth, window.innerHeight);
-renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2)); // 限制 PixelRatio 防止手機發燙
+renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
 renderer.toneMapping = THREE.ACESFilmicToneMapping;
 renderer.toneMappingExposure = 1.8; 
 document.body.appendChild(renderer.domElement);
@@ -52,15 +58,14 @@ document.body.appendChild(renderer.domElement);
 const controls = new OrbitControls(camera, renderer.domElement);
 camera.position.set(0, 15, 35);
 controls.enableDamping = true;
-controls.enablePan = false; // 禁用平移方便操作
+controls.enablePan = false;
 
-// --- 光源 ---
 scene.add(new THREE.AmbientLight(0xffffff, 1.2));
 const pointLight = new THREE.PointLight(0xffffff, 1000);
 pointLight.position.set(10, 20, 10);
 scene.add(pointLight);
 
-// --- 聖誕樹 10,000 粒子 ---
+// --- 聖誕樹與文字粒子 (10,000) ---
 const COUNT = 10000;
 const dummy = new THREE.Object3D();
 let currentState = 'tree';
@@ -112,7 +117,7 @@ const topStar = new THREE.Mesh(new THREE.OctahedronGeometry(1.5, 0), new THREE.M
 topStar.position.y = 16;
 scene.add(topStar);
 
-// --- 製作完整細節的小貓 ---
+// --- 完整的細節貓咪 ---
 const catGroup = new THREE.Group();
 const orangeMat = new THREE.MeshStandardMaterial({ color: 0xffa500 });
 const whiteMat = new THREE.MeshStandardMaterial({ color: 0xf0f0f0 });
@@ -129,17 +134,14 @@ catGroup.add(head);
 
 const earGeo = new THREE.ConeGeometry(0.25, 0.5, 3);
 const earL = new THREE.Mesh(earGeo, orangeMat);
-earL.position.set(1.2, 1.3, 0.3);
-earL.rotation.x = 0.2;
-const earR = earL.clone();
-earR.position.z = -0.3;
+earL.position.set(1.2, 1.3, 0.3); earL.rotation.x = 0.2;
+const earR = earL.clone(); earR.position.z = -0.3;
 catGroup.add(earL, earR);
 
 const cheekGeo = new THREE.SphereGeometry(0.2, 16, 16);
 const cheekL = new THREE.Mesh(cheekGeo, whiteMat);
 cheekL.position.set(1.7, 0.5, 0.15);
-const cheekR = cheekL.clone();
-cheekR.position.z = -0.15;
+const cheekR = cheekL.clone(); cheekR.position.z = -0.15;
 catGroup.add(cheekL, cheekR);
 
 const nose = new THREE.Mesh(new THREE.SphereGeometry(0.08, 8, 8), pinkMat);
@@ -149,20 +151,17 @@ catGroup.add(nose);
 const eyeGeo = new THREE.SphereGeometry(0.07, 8, 8);
 const eyeL = new THREE.Mesh(eyeGeo, darkMat);
 eyeL.position.set(1.7, 0.85, 0.25);
-const eyeR = eyeL.clone();
-eyeR.position.z = -0.25;
+const eyeR = eyeL.clone(); eyeR.position.z = -0.25;
 catGroup.add(eyeL, eyeR);
 
 const legGeo = new THREE.CapsuleGeometry(0.18, 0.4, 4, 8);
 const footGeo = new THREE.SphereGeometry(0.2, 8, 8);
 const foot = new THREE.Mesh(footGeo, whiteMat); foot.position.set(0, -0.3, 0);
 
-const legPos = [[0.8, -0.7, 0.5], [0.8, -0.7, -0.5], [-0.5, -0.7, 0.5], [-0.5, -0.7, -0.5]];
-legPos.forEach(p => {
+const legPositions = [[0.8, -0.7, 0.5], [0.8, -0.7, -0.5], [-0.5, -0.7, 0.5], [-0.5, -0.7, -0.5]];
+legPositions.forEach(p => {
     const l = new THREE.Mesh(legGeo, orangeMat);
-    l.position.set(...p);
-    l.add(foot.clone());
-    catGroup.add(l);
+    l.position.set(...p); l.add(foot.clone()); catGroup.add(l);
 });
 
 const tail = new THREE.Mesh(new THREE.CapsuleGeometry(0.15, 1.0, 4, 8), orangeMat);
@@ -172,7 +171,7 @@ catGroup.add(tail);
 catGroup.position.set(15, -6, 8); catGroup.scale.set(2.2, 2.2, 2.2);
 scene.add(catGroup);
 
-// --- 雪花 ---
+// 雪花
 const snowGeo = new THREE.BufferGeometry();
 const snowPos = new Float32Array(5000 * 3);
 for(let i=0; i<15000; i++) snowPos[i] = (Math.random()-0.5) * 150;
@@ -180,7 +179,7 @@ snowGeo.setAttribute('position', new THREE.BufferAttribute(snowPos, 3));
 const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({ color: 0xffffff, size: 0.15, transparent: true, opacity: 0.8 }));
 scene.add(snow);
 
-// --- 通用輸入處理 ---
+// --- 動態與輸入 ---
 const raycaster = new THREE.Raycaster();
 const mouse = new THREE.Vector2();
 
@@ -206,10 +205,8 @@ function transition(targetArray) {
 }
 
 function handleInput(e) {
-    // 取得座標 (滑鼠或觸摸)
     const clientX = e.touches ? e.touches[0].clientX : e.clientX;
     const clientY = e.touches ? e.touches[0].clientY : e.clientY;
-
     mouse.x = (clientX / window.innerWidth) * 2 - 1;
     mouse.y = -(clientY / window.innerHeight) * 2 + 1;
 
@@ -235,10 +232,8 @@ function handleInput(e) {
     }
 }
 
-// 監聽兩類事件
 window.addEventListener('mousedown', handleInput);
 window.addEventListener('touchstart', (e) => {
-    // 如果點擊的是按鈕，不攔截
     if(e.target.id === 'audio-hint') return;
     handleInput(e);
 }, { passive: false });
@@ -263,16 +258,12 @@ for (let i = 0; i < COUNT; i++) {
 }
 animate();
 
-// 音樂播放 (修正手機端播放)
-const sound = new THREE.Audio(new THREE.AudioListener());
+// --- 音樂啟動器 ---
 window.playMusic = () => {
-    if (!sound.isPlaying) {
-        const audioLoader = new THREE.AudioLoader();
-        audioLoader.load('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3', (b) => {
-            sound.setBuffer(b); sound.setLoop(true); sound.setVolume(0.5); sound.play();
-        });
-        document.getElementById('audio-hint').style.display = 'none';
-    }
+    const iframe = document.getElementById('bili-player');
+    // 重新加載連結並加上 autoplay=1
+    iframe.src = "//player.bilibili.com/player.html?bvid=BV1vX4y1M78y&page=1&autoplay=1";
+    document.getElementById('audio-hint').style.display = 'none';
 }
 
 window.addEventListener('resize', () => {
