--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             text-shadow: 0 0 15px rgba(255,215,0,0.7);
             font-family: 'Noto Serif TC', serif; z-index: 10;
         }
-        /* 讓播放器極小且位於角落，不干擾視覺 */
         #bili-player { 
             position: absolute; bottom: 0; left: 0; width: 1px; height: 1px; 
             opacity: 0; pointer-events: none; border: none;
@@ -35,11 +34,11 @@
 </script>
 
 <script type="module">
-import * as THREE from 'three';
+import * as THREE from 'this';
 import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 import gsap from 'https://cdn.skypack.dev/gsap';
 
-// --- 場景初始化 ---
+// --- 初始化場景 ---
 const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 const renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -58,16 +57,19 @@ const pointLight = new THREE.PointLight(0xffffff, 1000);
 pointLight.position.set(10, 20, 10);
 scene.add(pointLight);
 
-// --- 聖誕樹與文字粒子 ---
+// --- 聖誕樹與文字粒子系統 ---
 const COUNT = 10000;
 const dummy = new THREE.Object3D();
 let currentState = 'tree';
-const instMesh = new THREE.InstancedMesh(new THREE.SphereGeometry(0.12, 12, 12), new THREE.MeshStandardMaterial({ metalness: 1, roughness: 0.1 }), COUNT);
+
+const pbrMat = new THREE.MeshStandardMaterial({ metalness: 1, roughness: 0.1 });
+const instMesh = new THREE.InstancedMesh(new THREE.SphereGeometry(0.12, 12, 12), pbrMat, COUNT);
 scene.add(instMesh);
 
 const treePos = [];
 const textPos = [];
 
+// 生成樹的座標
 for (let i = 0; i < COUNT; i++) {
     const ratio = i / COUNT;
     const height = ratio * 22;
@@ -75,16 +77,22 @@ for (let i = 0; i < COUNT; i++) {
     const angle = i * 0.25;
     const dist = Math.sqrt(Math.random()) * radius;
     treePos.push(new THREE.Vector3(Math.cos(angle) * dist, height - 8, Math.sin(angle) * dist));
+    
     let color = new THREE.Color();
     const r = Math.random();
-    if (r < 0.6) color.setHex(0xFFD700); else if (r < 0.8) color.setHex(0xFF0000); else color.setHex(0x00FF44); 
+    if (r < 0.6) color.setHex(0xFFD700); 
+    else if (r < 0.8) color.setHex(0xFF0000); 
+    else color.setHex(0x00FF44); 
     instMesh.setColorAt(i, color);
 }
 
+// 生成文字座標
 const canvas = document.createElement('canvas');
 const ctx = canvas.getContext('2d');
 canvas.width = 1600; canvas.height = 400;
-ctx.fillStyle = 'white'; ctx.font = 'bold 85px serif, "Noto Serif TC"'; ctx.textAlign = 'center';
+ctx.fillStyle = 'white';
+ctx.font = 'bold 85px serif, "Noto Serif TC"';
+ctx.textAlign = 'center';
 ctx.fillText('Merry Christmas to 鐵鐵', 800, 200);
 const data = ctx.getImageData(0, 0, 1600, 400).data;
 const points = [];
@@ -95,26 +103,20 @@ for (let y = 0; y < 400; y += 4) {
 }
 for (let i = 0; i < COUNT; i++) textPos.push(points[i % points.length].clone());
 
+// 樹頂星星
 const topStar = new THREE.Mesh(new THREE.OctahedronGeometry(1.5, 0), new THREE.MeshStandardMaterial({ color: 0xffff00, emissive: 0xffaa00, emissiveIntensity: 5 }));
-topStar.position.y = 16; scene.add(topStar);
-
-// --- 橘色小貓 ---
-const catGroup = new THREE.Group();
-const orangeMat = new THREE.MeshStandardMaterial({ color: 0xffa500 });
-const body = new THREE.Mesh(new THREE.SphereGeometry(1, 32, 32), orangeMat); body.scale.set(1.4, 1.0, 1.1); catGroup.add(body);
-const head = new THREE.Mesh(new THREE.SphereGeometry(0.75, 32, 32), orangeMat); head.position.set(1.1, 0.7, 0); catGroup.add(head);
-// (簡化其餘部件以節省空間，確保渲染流暢)
-catGroup.position.set(15, -6, 8); catGroup.scale.set(2.2, 2.2, 2.2); scene.add(catGroup);
+topStar.position.y = 16;
+scene.add(topStar);
 
 // 雪花
 const snowGeo = new THREE.BufferGeometry();
 const snowPos = new Float32Array(5000 * 3);
 for(let i=0; i<15000; i++) snowPos[i] = (Math.random()-0.5) * 150;
 snowGeo.setAttribute('position', new THREE.BufferAttribute(snowPos, 3));
-const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({ color: 0xffffff, size: 0.15, transparent: true }));
+const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({ color: 0xffffff, size: 0.15, transparent: true, opacity: 0.8 }));
 scene.add(snow);
 
-// --- 自動播放音樂邏輯 (隱形觸發) ---
+// --- 音樂自動播放 (隱形觸發) ---
 let musicStarted = false;
 function startMusic() {
     if (musicStarted) return;
@@ -123,47 +125,65 @@ function startMusic() {
     musicStarted = true;
 }
 
-// 當鐵鐵嘗試滑動螢幕看聖誕樹時，音樂會自動啟動
-window.addEventListener('touchstart', startMusic, { passive: true });
-window.addEventListener('mousedown', startMusic);
-
-// --- 動畫 ---
+// --- 粒子動畫切換 ---
 function transition(targetArray) {
-    const startPos = []; const m = new THREE.Matrix4();
-    for(let i=0; i<COUNT; i++) { instMesh.getMatrixAt(i, m); startPos.push(new THREE.Vector3().setFromMatrixPosition(m)); }
+    const startPositions = [];
+    const m = new THREE.Matrix4();
+    for(let i=0; i<COUNT; i++) {
+        instMesh.getMatrixAt(i, m);
+        startPositions.push(new THREE.Vector3().setFromMatrixPosition(m));
+    }
     const obj = { t: 0 };
-    gsap.to(obj, { t: 1, duration: 1.5, onUpdate: () => {
-        for (let i = 0; i < COUNT; i++) {
-            dummy.position.lerpVectors(startPos[i], targetArray[i], obj.t); dummy.updateMatrix(); instMesh.setMatrixAt(i, dummy.matrix);
+    gsap.to(obj, {
+        t: 1, duration: 1.5, ease: "power3.inOut",
+        onUpdate: () => {
+            for (let i = 0; i < COUNT; i++) {
+                dummy.position.lerpVectors(startPositions[i], targetArray[i], obj.t);
+                dummy.updateMatrix();
+                instMesh.setMatrixAt(i, dummy.matrix);
+            }
+            instMesh.instanceMatrix.needsUpdate = true;
         }
-        instMesh.instanceMatrix.needsUpdate = true;
-    }});
+    });
 }
 
 function handleInput(e) {
+    startMusic(); // 第一次觸摸即啟動音樂
+    
     if (currentState === 'tree') {
-        transition(treePos.map(p => p.clone().add(new THREE.Vector3((Math.random()-0.5)*30, (Math.random()-0.5)*30, (Math.random()-0.5)*30))));
-        currentState = 'scatter';
+        const scat = treePos.map(p => p.clone().add(new THREE.Vector3((Math.random()-0.5)*30, (Math.random()-0.5)*30, (Math.random()-0.5)*30)));
+        transition(scat); currentState = 'scatter';
     } else if (currentState === 'scatter') {
         transition(textPos); currentState = 'text';
     } else {
         transition(treePos); currentState = 'tree';
     }
 }
+
 window.addEventListener('mousedown', handleInput);
 window.addEventListener('touchstart', handleInput, { passive: true });
 
 function animate() {
     requestAnimationFrame(animate);
-    if (currentState === 'tree') instMesh.rotation.y += 0.005;
+    if (currentState === 'tree') { instMesh.rotation.y += 0.005; topStar.rotation.y += 0.02; }
     const pos = snow.geometry.attributes.position.array;
-    for(let i=1; i<pos.length; i+=3) { pos[i] -= 0.1; if(pos[i] < -20) pos[i] = 60; }
+    for(let i=1; i<pos.length; i+=3) {
+        pos[i] -= 0.12;
+        if(pos[i] < -20) pos[i] = 60;
+    }
     snow.geometry.attributes.position.needsUpdate = true;
-    controls.update(); renderer.render(scene, camera);
+    controls.update();
+    renderer.render(scene, camera);
 }
 
-for (let i = 0; i < COUNT; i++) { dummy.position.copy(treePos[i]); dummy.updateMatrix(); instMesh.setMatrixAt(i, dummy.matrix); }
+// 初始化粒子位置
+for (let i = 0; i < COUNT; i++) {
+    dummy.position.copy(treePos[i]);
+    dummy.updateMatrix();
+    instMesh.setMatrixAt(i, dummy.matrix);
+}
 animate();
+
 window.addEventListener('resize', () => {
     camera.aspect = window.innerWidth / window.innerHeight; camera.updateProjectionMatrix();
     renderer.setSize(window.innerWidth, window.innerHeight);
