--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             text-shadow: 0 0 15px rgba(255,215,0,0.7);
             font-family: 'Noto Serif TC', serif; z-index: 10;
         }
+        /* 隱藏播放器 */
         #bili-player { 
             position: absolute; bottom: 0; left: 0; width: 1px; height: 1px; 
             opacity: 0; pointer-events: none; border: none;
@@ -34,11 +35,11 @@
 </script>
 
 <script type="module">
-import * as THREE from 'this';
+import * as THREE from 'three';
 import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 import gsap from 'https://cdn.skypack.dev/gsap';
 
-// --- 初始化場景 ---
+// --- 場景初始化 ---
 const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 const renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -57,19 +58,17 @@ const pointLight = new THREE.PointLight(0xffffff, 1000);
 pointLight.position.set(10, 20, 10);
 scene.add(pointLight);
 
-// --- 聖誕樹與文字粒子系統 ---
+// --- 聖誕樹與文字粒子 ---
 const COUNT = 10000;
 const dummy = new THREE.Object3D();
 let currentState = 'tree';
-
-const pbrMat = new THREE.MeshStandardMaterial({ metalness: 1, roughness: 0.1 });
-const instMesh = new THREE.InstancedMesh(new THREE.SphereGeometry(0.12, 12, 12), pbrMat, COUNT);
+const instMesh = new THREE.InstancedMesh(new THREE.SphereGeometry(0.12, 12, 12), new THREE.MeshStandardMaterial({ metalness: 1, roughness: 0.1 }), COUNT);
 scene.add(instMesh);
 
 const treePos = [];
 const textPos = [];
 
-// 生成樹的座標
+// 生成聖誕樹座標
 for (let i = 0; i < COUNT; i++) {
     const ratio = i / COUNT;
     const height = ratio * 22;
@@ -77,7 +76,6 @@ for (let i = 0; i < COUNT; i++) {
     const angle = i * 0.25;
     const dist = Math.sqrt(Math.random()) * radius;
     treePos.push(new THREE.Vector3(Math.cos(angle) * dist, height - 8, Math.sin(angle) * dist));
-    
     let color = new THREE.Color();
     const r = Math.random();
     if (r < 0.6) color.setHex(0xFFD700); 
@@ -90,9 +88,7 @@ for (let i = 0; i < COUNT; i++) {
 const canvas = document.createElement('canvas');
 const ctx = canvas.getContext('2d');
 canvas.width = 1600; canvas.height = 400;
-ctx.fillStyle = 'white';
-ctx.font = 'bold 85px serif, "Noto Serif TC"';
-ctx.textAlign = 'center';
+ctx.fillStyle = 'white'; ctx.font = 'bold 85px serif, "Noto Serif TC"'; ctx.textAlign = 'center';
 ctx.fillText('Merry Christmas to 鐵鐵', 800, 200);
 const data = ctx.getImageData(0, 0, 1600, 400).data;
 const points = [];
@@ -103,20 +99,18 @@ for (let y = 0; y < 400; y += 4) {
 }
 for (let i = 0; i < COUNT; i++) textPos.push(points[i % points.length].clone());
 
-// 樹頂星星
 const topStar = new THREE.Mesh(new THREE.OctahedronGeometry(1.5, 0), new THREE.MeshStandardMaterial({ color: 0xffff00, emissive: 0xffaa00, emissiveIntensity: 5 }));
-topStar.position.y = 16;
-scene.add(topStar);
+topStar.position.y = 16; scene.add(topStar);
 
-// 雪花
+// 雪花效果
 const snowGeo = new THREE.BufferGeometry();
 const snowPos = new Float32Array(5000 * 3);
 for(let i=0; i<15000; i++) snowPos[i] = (Math.random()-0.5) * 150;
 snowGeo.setAttribute('position', new THREE.BufferAttribute(snowPos, 3));
-const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({ color: 0xffffff, size: 0.15, transparent: true, opacity: 0.8 }));
+const snow = new THREE.Points(snowGeo, new THREE.PointsMaterial({ color: 0xffffff, size: 0.15, transparent: true }));
 scene.add(snow);
 
-// --- 音樂自動播放 (隱形觸發) ---
+// --- 音樂啟動邏輯 ---
 let musicStarted = false;
 function startMusic() {
     if (musicStarted) return;
@@ -125,63 +119,53 @@ function startMusic() {
     musicStarted = true;
 }
 
-// --- 粒子動畫切換 ---
+// --- 動畫切換 ---
 function transition(targetArray) {
-    const startPositions = [];
-    const m = new THREE.Matrix4();
-    for(let i=0; i<COUNT; i++) {
-        instMesh.getMatrixAt(i, m);
-        startPositions.push(new THREE.Vector3().setFromMatrixPosition(m));
+    const startPos = []; const m = new THREE.Matrix4();
+    for(let i=0; i<COUNT; i++) { 
+        instMesh.getMatrixAt(i, m); 
+        startPos.push(new THREE.Vector3().setFromMatrixPosition(m)); 
     }
     const obj = { t: 0 };
-    gsap.to(obj, {
-        t: 1, duration: 1.5, ease: "power3.inOut",
-        onUpdate: () => {
-            for (let i = 0; i < COUNT; i++) {
-                dummy.position.lerpVectors(startPositions[i], targetArray[i], obj.t);
-                dummy.updateMatrix();
-                instMesh.setMatrixAt(i, dummy.matrix);
-            }
-            instMesh.instanceMatrix.needsUpdate = true;
+    gsap.to(obj, { t: 1, duration: 1.5, ease: "power2.inOut", onUpdate: () => {
+        for (let i = 0; i < COUNT; i++) {
+            dummy.position.lerpVectors(startPos[i], targetArray[i], obj.t); 
+            dummy.updateMatrix(); 
+            instMesh.setMatrixAt(i, dummy.matrix);
         }
-    });
+        instMesh.instanceMatrix.needsUpdate = true;
+    }});
 }
 
 function handleInput(e) {
-    startMusic(); // 第一次觸摸即啟動音樂
-    
+    startMusic(); // 觸摸時啟動音樂
     if (currentState === 'tree') {
-        const scat = treePos.map(p => p.clone().add(new THREE.Vector3((Math.random()-0.5)*30, (Math.random()-0.5)*30, (Math.random()-0.5)*30)));
-        transition(scat); currentState = 'scatter';
+        transition(treePos.map(p => p.clone().add(new THREE.Vector3((Math.random()-0.5)*30, (Math.random()-0.5)*30, (Math.random()-0.5)*30))));
+        currentState = 'scatter';
     } else if (currentState === 'scatter') {
         transition(textPos); currentState = 'text';
     } else {
         transition(treePos); currentState = 'tree';
     }
 }
-
 window.addEventListener('mousedown', handleInput);
 window.addEventListener('touchstart', handleInput, { passive: true });
 
 function animate() {
     requestAnimationFrame(animate);
-    if (currentState === 'tree') { instMesh.rotation.y += 0.005; topStar.rotation.y += 0.02; }
+    if (currentState === 'tree') instMesh.rotation.y += 0.005;
     const pos = snow.geometry.attributes.position.array;
-    for(let i=1; i<pos.length; i+=3) {
-        pos[i] -= 0.12;
-        if(pos[i] < -20) pos[i] = 60;
+    for(let i=1; i<pos.length; i+=3) { 
+        pos[i] -= 0.1; 
+        if(pos[i] < -20) pos[i] = 60; 
     }
     snow.geometry.attributes.position.needsUpdate = true;
-    controls.update();
+    controls.update(); 
     renderer.render(scene, camera);
 }
 
-// 初始化粒子位置
-for (let i = 0; i < COUNT; i++) {
-    dummy.position.copy(treePos[i]);
-    dummy.updateMatrix();
-    instMesh.setMatrixAt(i, dummy.matrix);
-}
+// 初始位置
+for (let i = 0; i < COUNT; i++) { dummy.position.copy(treePos[i]); dummy.updateMatrix(); instMesh.setMatrixAt(i, dummy.matrix); }
 animate();
 
 window.addEventListener('resize', () => {
